--- a/src/app/detalhe/detalhe.component.scss
+++ b/src/app/detalhe/detalhe.component.scss
@@ -15,21 +15,28 @@
 	}
 	.app-detalhe {
 		text-align: left;
-		&>.headline {
-			position: relative;
-			text-align: left;
-			&>.wrap {
-				display: inline-block;
-				&.right {
-					text-align: right;
-					position: absolute;
-					top: 50%;
-					transform: translate(0, -50%);
-					right: 0;
-				}
-				&>div {
+		& .headline {
+			.top {
+				position: relative;
+				text-align: left;
+				&>.wrap {
 					display: inline-block;
-					vertical-align: middle;
+					&.right {
+						text-align: right;
+						position: absolute;
+						top: 50%;
+						transform: translate(0, -50%);
+						right: 0;
+					}
+					&>div {
+						display: inline-block;
+						vertical-align: middle;
+					}
+				}
+			}
+			.bot {
+				strong {
+					font-weight: 600;
 				}
 			}
 		}
