--- a/src/app/detalhe/detalhe.component.html
+++ b/src/app/detalhe/detalhe.component.html
@@ -21,7 +21,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="bot" [hidden]="!vars.params.in || !vars.params.out">
+			<div class="bot" [hidden]="!vars.params.in || !vars.params.out || !vars.params.rng">
 				<p class="fsz f17">
 					<span>{{ vars.params.rng }} Noites</span>
 					<strong>Entrada</strong>
