--- a/src/app/detalhe/detalhe.component.html
+++ b/src/app/detalhe/detalhe.component.html
@@ -25,14 +25,36 @@
 				<p class="fsz f17">
 					<span>{{ vars.params.rng }} Noites</span>
 					<strong>Entrada</strong>
-					<span [textContent]="vars.param.in"></span>
-					<span [textContent]="vars.param.out"></span>
+					<span [textContent]="vars.params.in"></span>
+					<span [textContent]="vars.params.out"></span>
 				</p>
 			</div>
 		</div>
+		<ul class="menu">
+			<li>
+				<a href="javascript:;" fragment="quartos">
+					<span>Quartos</span>
+				</a>
+			</li>
+			<li>
+				<a href="javascript:;" fragment="bom-saber">
+					<span>Bom saber</span>
+				</a>
+			</li>
+			<li>
+				<a href="javascript:;" fragment="facilidades">
+					<span>Facilidades do hotel</span>
+				</a>
+			</li>
+			<li>
+				<a href="javascript:;" fragment="pontos-de-interesse">
+					<span>Pontos de interesse</span>
+				</a>
+			</li>
+		</ul>
 	</div>
-	<div id="quartos"></div>
-	<div id="bom-saber"></div>
-	<div id="facilidades"></div>
-	<div id="pontos-de-interesse"></div>
+	<div id="nav-quartos"></div>
+	<div id="nav-bom-saber"></div>
+	<div id="nav-facilidades"></div>
+	<div id="nav-pontos-de-interesse"></div>
 </div>
