--- a/src/app/html/bar/calendar/calendar.component.scss
+++ b/src/app/html/bar/calendar/calendar.component.scss
@@ -78,7 +78,7 @@
 				display: block;
 				content: '';
 				position: absolute;
-				background-color: #fff;
+				background-color: transparent;
 				top: 0;
 				left: 0;
 				cursor: default;
