--- a/src/app/detalhe/detalhe.component.scss
+++ b/src/app/detalhe/detalhe.component.scss
@@ -41,39 +41,109 @@
 			}
 		}
 		.summary {
-			.img {
-				float: left;
-				width: 30%;
-				padding-bottom: 30%;
-				overflow: hidden;
-				position: relative;
-				.abs {
-					position: absolute;
-					top: 0;
-					left: 0;
-					height: auto;
+			.imgs {
+				width: 75%;
+				.img {
+					float: left;
 					width: 100%;
-					display: block;
-					transition: left .4s ease;
-					background-color: #fff;
-					z-index: 0;
-					&.alignL {
-						left: -100%;
-					}
-					&.alignC {
-						left: 0%;
-					}
-					&.alignR {
-						left: 100%;
-					}
-
-					img {
-						display: block;
+					height: auto;
+					overflow: hidden;
+					position: relative;
+					text-align: center;
+					background-color: #000;
+					.prevNext {
+						position: absolute;
+						top: 0;
+						left: 0;
 						width: 100%;
+						height: 100%;
+						z-index: 1;
+						&>div {
+							width: 50%;
+							float: left;
+							height: 100%;
+							&>span {
+							background-color: #fff;
+							padding: .3rem;
+							position: absolute;
+							top: 50%;
+							transform: translate(0, -50%);
+							cursor: pointer;
+							&.left {
+								left: 0;
+								padding-left: 0;
+							}
+							&.right {
+								right: 0;
+								padding-right: 0;
+							}
+							}
+						}
 					}
-					img.flipped {
-						transform: scaleX(-1) rotate(180deg);
-						filter: FlipH;
+					.overlay {
+						position: absolute;
+						top: 0;
+						left: 0;
+						z-index: 1;
+						background: rgba(0, 0, 0, 0.4);
+						padding: 0.3rem;
+						&>strong {
+							vertical-align: middle;
+							display: inline-block;
+							font-weight: 600;
+							color: #fff;
+							vertical-align: middle;
+							&::-moz-selection {
+								background-color: transparent;
+							}
+							&::selection {
+								background-color: transparent;
+							}
+
+							&>span {
+								font-weight: normal;
+								&::-moz-selection {
+									background-color: transparent;
+								}
+								&::selection {
+									background-color: transparent;
+								}
+							}
+						}
+					}
+					.abs {
+						position: absolute;
+						top: 50%;
+						left: 0;
+						transform: translate(0, -50%);
+						height: 100%;
+						width: 100%;
+						display: block;
+						transition: left .4s ease;
+						z-index: 0;
+						&.alignL {
+							left: -100%;
+						}
+						&.alignC {
+							left: 0%;
+						}
+						&.alignR {
+							left: 100%;
+						}
+						img {
+							position: absolute;
+							top: 50%;
+							left: 50%;
+							transform: translate(-50%, -50%);
+							&.wide {
+								width: 100%;
+								height: auto;
+							}
+							&.tall {
+								height: 100%;
+								width: auto;
+							}
+						}
 					}
 				}
 			}
