--- a/src/app/detalhe/detalhe.component.scss
+++ b/src/app/detalhe/detalhe.component.scss
@@ -113,9 +113,8 @@
 					}
 					.abs {
 						position: absolute;
-						top: 50%;
+						top: 0;
 						left: 0;
-						transform: translate(0, -50%);
 						height: 100%;
 						width: 100%;
 						display: block;
