--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -199,7 +199,7 @@
 									<span class="label" [textContent]="item.tripAdvisorLabel"></span>
 									<span class="rate" [textContent]="item.tripAdvisorRating.toFixed(1)"></span>
 								</div>
-								<div class="lastRooms fgc c2" [hidden]="item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment <= 0 || item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment >= 2147483646">
+								<div class="lastRooms fgc c2" [hidden]="item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment <= 0 || item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment >= 2147483646 || item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.currentAllotment >= 30">
 									<span class="icon">
 										<img [attr.src]="vars.icons.base + vars.icons.hot" alt="">
 									</span>
