--- a/src/app/detalhe/detalhe.component.scss
+++ b/src/app/detalhe/detalhe.component.scss
@@ -43,6 +43,34 @@
 		.summary {
 			.imgs {
 				width: 70%;
+				position: relative;
+				.thumbs {
+					background-color: #000;
+					width: 100%;
+					display: block;
+					&[hidden] {
+						overflow: hidden;
+					}
+					.thumb {
+						display: inline-block;
+						margin: 0 2px;
+						cursor: pointer;
+						border: 1px solid transparent;
+						&:hover,
+						&.active {
+							border-color: #C0252E;
+						}
+					}
+					&[hidden]>a {
+						position: absolute;
+						bottom: 0;
+						right: 0;
+						background-color: #243E6F;
+						span {
+							color: #fff;
+						}
+					}
+				}
 				.img {
 					float: left;
 					width: 100%;
@@ -63,20 +91,20 @@
 							float: left;
 							height: 100%;
 							&>span {
-							background-color: #fff;
-							padding: .3rem;
-							position: absolute;
-							top: 50%;
-							transform: translate(0, -50%);
-							cursor: pointer;
-							&.left {
-								left: 0;
-								padding-left: 0;
-							}
-							&.right {
-								right: 0;
-								padding-right: 0;
-							}
+								background-color: #fff;
+								padding: .3rem;
+								position: absolute;
+								top: 50%;
+								transform: translate(0, -50%);
+								cursor: pointer;
+								&.left {
+									left: 0;
+									padding-left: 0;
+								}
+								&.right {
+									right: 0;
+									padding-right: 0;
+								}
 							}
 						}
 					}
@@ -113,8 +141,9 @@
 					}
 					.abs {
 						position: absolute;
-						top: 0;
-						left: 0;
+						top: 50%;
+						left: 100%;
+						transform: translate(0, -50%);
 						height: 100%;
 						width: 100%;
 						display: block;
@@ -134,6 +163,8 @@
 							top: 50%;
 							left: 50%;
 							transform: translate(-50%, -50%);
+							width: 0;
+							height: 0;
 							&.wide {
 								width: 100%;
 								height: auto;
