--- a/src/app/html/bar/bar.component.html
+++ b/src/app/html/bar/bar.component.html
@@ -13,6 +13,6 @@
 		<input placeholder="eanSharedSecret" name="secret" [(ngModel)]="keys.secret">
 	</div>
 </form>
-<div class="sub" *ngIf="vars.loadSearch && vars.last.props">
+<div class="sub" [hidden]="!vars.loadSearch || !vars.last.props">
 	<span class="txt">{{vars.last.busca}}: {{vars.last.props}} propriedade{{vars.last.props > 1 ? 's' : ''}}</span>
 </div>
