--- a/src/app/busca/busca.component.html
+++ b/src/app/busca/busca.component.html
@@ -146,7 +146,15 @@
 			</div>
 			<ul *ngIf="hotelList.searchId">
 				<li [attr.style]="cardShadow(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color)" [attr.class]="'wrap ' + 'cardN' + i + ' '" *ngFor="let item of hotelList.HotelListResponse; let i = index;">
-					<div class="img" (click)="show.cardImg[i] = show.cardImg[i] ? 0 : 1" [attr.data-test]="(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color ? ('box-shadow: 0px 0px 16px 4px ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color + ';') : '')">
+					<div class="img" [attr.data-test]="(item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color ? ('box-shadow: 0px 0px 16px 4px ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.color + ';') : '')">
+						<div class="prevNext">
+							<div (click)="show.cardImg[i] = show.cardImg[i] === 0 ? 1 : show.cardImg[i] - 1">
+								<span class="left fgc c1"><i class="fa fa-chevron-left fa-2x"></i></span>
+							</div>
+							<div (click)="show.cardImg[i] = show.cardImg[i] >= 1 ? 0 : show.cardImg[i] + 1">
+								<span class="right fgc c1"><i class="fa fa-chevron-right fa-2x"></i></span>
+							</div>
+						</div>
 						<span *ngIf="show.valueAdds[i] && show.valueAdds[i][0]" class="cafe-incluso">
 							<i [attr.class]="'fa ' + valueAdds.icons[0]"></i>
 							<span class="fgc c1 fsz f13">
