--- a/src/app/busca/busca.component.scss
+++ b/src/app/busca/busca.component.scss
@@ -191,6 +191,36 @@
 					padding-bottom: 30%;
 					overflow: hidden;
 					position: relative;
+					.prevNext {
+						position: absolute;
+						top: 0;
+						left: 0;
+						width: 100%;
+						height: 100%;
+						z-index: 1;
+						font-size: 0.6rem;
+						&>div {
+							width: 50%;
+							float: left;
+							height: 100%;
+							&>span {
+								background-color: #fff;
+								padding: .3rem;
+								position: absolute;
+								top: 50%;
+								transform: translate(0, -50%);
+								cursor: pointer;
+								&.left {
+									left: 0;
+									padding-left: 0;
+								}
+								&.right {
+									right: 0;
+									padding-right: 0;
+								}
+							}
+						}
+					}
 					.cafe-incluso {
 						position: absolute;
 						top: 0.5rem;
