--- a/src/app/detalhe/detalhe.component.scss
+++ b/src/app/detalhe/detalhe.component.scss
@@ -82,7 +82,8 @@ body {
 										text-align: center;
 										display: inline-block;
 										vertical-align: middle;
-										margin: -5px 0 0 -2px;
+										margin: 0;
+										margin-left: -2px;
 										&:before {
 											content: '';
 											display: inline-block;
@@ -94,16 +95,19 @@ body {
 											color: #fff;
 											display: inline-block;
 											vertical-align: middle;
+											max-width: 95%;
 										}
 									}
 									&[hidden]>a {
 										position: absolute;
-										bottom: 0.4rem;
-										right: 0.4rem;
+										bottom: 0;
+										right: 0;
+										box-sizing: initial;
+										padding: .11rem .33rem;
 									}
 									.thumb {
 										display: inline-block;
-										margin: 0 2px;
+										margin: 1px;
 										cursor: pointer;
 										border: 1px solid transparent;
 										vertical-align: middle;
@@ -111,12 +115,16 @@ body {
 										&.active {
 											border-color: #C0252E;
 										}
+										& img {
+											display: block;
+											margin: 0;
+										}
 									}
 								}
 								.img {
 									float: left;
 									width: 100%;
-									height: auto;
+									height: 34rem;
 									overflow: hidden;
 									position: relative;
 									text-align: center;
@@ -128,6 +136,7 @@ body {
 										width: 100%;
 										height: 100%;
 										z-index: 1;
+										font-size: 0.6rem;
 										&>div {
 											width: 50%;
 											float: left;
@@ -218,6 +227,11 @@ body {
 										}
 									}
 								}
+							}
+						}
+						.nav {
+							img {
+								width: 100%;
 							}
 						}
 					}
